# solution/expressbackend/models/user.js
@@ -54,6 +54,12 @@ const UserSchema = new Schema({
     toObject: { virtuals: true }
 });
 
+/**
+ * @function pre
+ * @description This function is a mongoose middleware that runs before saving a user document. It checks if the password field has been modified. If it has, it hashes the password and sets the confirmPassword field to undefined.
+ * @param {Function} next - The mongoose next function.
+ * @returns {void}
+ */
 UserSchema.pre(/create|save/, async function (next) {
   if (!this.isModified('password')) return next();
 
@@ -62,6 +68,14 @@ UserSchema.pre(/create|save/, async function (next) {
   this.confirmPassword = undefined;
   next();
 });
+
+/**
+ * @method correctPassword
+ * @description This method checks if the provided candidate password matches the user's password.
+ * @param {String} candidatePassword - The candidate password.
+ * @param {String} userPassword - The user's password.
+ * @returns {Boolean} Returns true if the candidate password matches the user's password, false otherwise.
+ */
 UserSchema.methods.correctPassword = async function (
   candidatePassword,
   userPassword
@@ -69,6 +83,12 @@ UserSchema.methods.correctPassword = async function (
   return await bcrypt.compare(candidatePassword, userPassword);
 };
 
+/**
+ * @method changePasswordAfter
+ * @description This method checks if the user's password has been changed after the provided JWT timestamp.
+ * @param {Number} JWTTimestamp - The JWT timestamp.
+ * @returns {Boolean} Returns true if the user's password has been changed after the JWT timestamp, false otherwise.
+ */
 UserSchema.methods.changePasswordAfter = function (JWTTimestamp) {
   if (this.passwordChangedAt) {
     const changedTimeStamp = parseInt(
@@ -80,6 +100,12 @@ UserSchema.methods.changePasswordAfter = function (JWTTimestamp) {
 
   return false;
 };
+
+/**
+ * @method createPasswordResetToken
+ * @description This method creates a password reset token for the user. It generates a random token, hashes it, and sets it as the user's passwordResetToken. It also sets the passwordResetExpires field to 10 minutes from the current time.
+ * @returns {String} Returns the generated reset token.
+ */
 UserSchema.methods.createPasswordResetToken = function () {
   const resetToken = crypto.randomBytes(32).toString('hex');
 
