# solution/expressbackend/routes/room.js
@@ -3,9 +3,8 @@ const {getAllRoom, getOneRoom, deleteRoom, createRoom, getAllUserRoom, updateRoo
 const {protect} = require("../controllers/special/authController");
 const router = express.Router();
 
-router.route('/').get(getAllRoom).post(protect, createRoom);
-router.route('/:id').get(getOneRoom).patch(updateRoom).delete(deleteRoom);
-router.route('/user/:id').get(getAllUserRoom);
+router.route('/').post(protect, createRoom);
+router.route('/user').get(protect, getAllUserRoom);
 router.route('/newMessage/:roomID').post(protect, newMessage);
 router.route('/join/:roomID').post(protect, joinRoom);
 router.route('/leave/:roomID').post(protect, leaveRoom);
