# solution/mainServer/swaggerDef.yaml
@@ -32,6 +32,11 @@ components:
         $ref: '/models/swaggerSchemas/user.yaml#/components/schemas/UserLoginResponse'
     UserResetPasswordRequest:
         $ref: '/models/swaggerSchemas/user.yaml#/components/schemas/UserResetPasswordRequest'
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 paths:
   /appearence:
     get:
@@ -735,7 +740,7 @@ paths:
                               type: number
                               description: Total market value of the club
                               example: 100000000
-  /player/valuations:
+  /playerValuation:
     get:
       tags:
         - Player
@@ -781,91 +786,7 @@ paths:
             application/json:
               schema:
                 $ref: '/models/swaggerSchemas/playerValuation.yaml#/components/schemas/PlayerValuation'
-  /player/valuations/{id}:
-    get:
-      tags:
-        - Player
-        - PlayerValuation
-      description: Use to request one player valuation
-      parameters:
-        - name: id
-          in: path
-          description: Player Valuation ID
-          required: true
-          example: 6574bc5d0a8453403804feea
-      responses:
-        200:
-          description: A successful response
-          content:
-              application/json:
-                schema:
-                    $ref: '/models/swaggerSchemas/playerValuation.yaml#/components/schemas/PlayerValuation'
-    patch:
-      tags:
-        - Player
-        - PlayerValuation
-      description: Use to update one player valuation
-      parameters:
-        - name: id
-          in: path
-          description: Player Valuation ID
-          required: true
-          example: 6574bc5d0a8453403804feea
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '/models/swaggerSchemas/playerValuation.yaml#/components/schemas/PlayerValuation'
-      responses:
-        200:
-          description: A successful response
-          content:
-            application/json:
-              schema:
-                $ref: '/models/swaggerSchemas/playerValuation.yaml#/components/schemas/PlayerValuation'
-    delete:
-      tags:
-        - Player
-        - PlayerValuation
-      description: Use to delete one player valuation
-      parameters:
-        - name: id
-          in: path
-          description: Player Valuation ID
-          required: true
-          example: 6574bc5d0a8453403804feea
-      responses:
-        200:
-          description: A successful response
-          content:
-              application/json:
-                schema:
-                    $ref: '/models/swaggerSchemas/playerValuation.yaml#/components/schemas/PlayerValuation'
   /room:
-    get:
-      tags:
-        - Room
-      description: Use to request all rooms
-      parameters:
-        - $ref: '/models/swaggerSchemas/apiFeaturesParams.yaml#/parameters/page'
-        - $ref: '/models/swaggerSchemas/apiFeaturesParams.yaml#/parameters/sort'
-        - $ref: '/models/swaggerSchemas/apiFeaturesParams.yaml#/parameters/limit'
-        - $ref: '/models/swaggerSchemas/apiFeaturesParams.yaml#/parameters/fields'
-        - $ref: '/models/swaggerSchemas/room.yaml#/components/parameters/name'
-        - $ref: '/models/swaggerSchemas/room.yaml#/components/parameters/description'
-        - $ref: '/models/swaggerSchemas/room.yaml#/components/parameters/members'
-        - $ref: '/models/swaggerSchemas/room.yaml#/components/parameters/messages'
-        - $ref: '/models/swaggerSchemas/room.yaml#/components/parameters/createdAt'
-        - $ref: '/models/swaggerSchemas/room.yaml#/components/parameters/admin'
-      responses:
-        200:
-          description: A successful response
-          content:
-              application/json:
-                schema:
-                    type: array
-                    items:
-                      $ref: '/models/swaggerSchemas/room.yaml#/components/schemas/ChatRoom'
     post:
       tags:
         - Room
@@ -940,17 +861,14 @@ paths:
               application/json:
                 schema:
                     $ref: '/models/swaggerSchemas/room.yaml#/components/schemas/ChatRoom'
-  /room/user/{id}:
+  /room/user:
     get:
+      security:
+        - bearerAuth: []
       tags:
         - Room
-      description: Use to request all rooms of a user
-      parameters:
-        - name: id
-          in: path
-          description: User ID
-          required: true
-          example: 6574bc5d0a8453403804feea
+      description: Use to request all rooms of the current authenticated user
+
       responses:
         200:
           description: A successful response
@@ -960,11 +878,11 @@ paths:
                     type: array
                     items:
                       $ref: '/models/swaggerSchemas/room.yaml#/components/schemas/ChatRoom'
-  /room/newMessage/{roomID}: #i want to protect this with bearer JWT token
+  /room/newMessage/{roomID}:
     post:
       tags:
         - Room
-      description: Use to create a new message in a room
+      description: Use to create a new message in a room from the authenticated user
       parameters:
         - name: roomID
           in: path
@@ -977,10 +895,6 @@ paths:
             schema:
               type: object
               properties:
-                from:
-                  type: string
-                  description: From id of the message
-                  example: '5f9d1b4b2f6f1f0e5c1d7a0a'
                 text:
                   type: string
                   description: Text of the message
@@ -1014,16 +928,6 @@ paths:
           description: Room ID
           required: true
           example: 6574bc5d0a8453403804feea
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                userID:
-                  type: string
-                  description: User ID
-                  example: '5f9d1b4b2f6f1f0e5c1d7a0a'
       security:
         - bearerAuth: []
       responses:
@@ -1049,16 +953,6 @@ paths:
           description: Room ID
           required: true
           example: 6574bc5d0a8453403804feea
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                userID:
-                  type: string
-                  description: User ID
-                  example: '5f9d1b4b2f6f1f0e5c1d7a0a'
       security:
         - bearerAuth: []
       responses:
@@ -1093,7 +987,7 @@ paths:
                     type: array
                     items:
                       $ref: '/models/swaggerSchemas/room.yaml#/components/schemas/ChatRoom'
-  /user/signup:
+  /users/signup:
     post:
       tags:
         - User/Authentication
@@ -1111,7 +1005,7 @@ paths:
             application/json:
               schema:
                 $ref: '/models/swaggerSchemas/user.yaml#/components/schemas/UserLoginResponse'
-  /user/login:
+  /users/login:
     post:
       tags:
         - User/Authentication
@@ -1129,7 +1023,7 @@ paths:
             application/json:
               schema:
                 $ref: '/models/swaggerSchemas/user.yaml#/components/schemas/UserLoginResponse'
-  /user/forgotPassword:
+  /users/forgotPassword:
     post: #only email field in body
         tags:
             - User/Authentication
@@ -1156,7 +1050,7 @@ paths:
                               type: string
                               description: Status of the response
                               example: 'success'
-  /user/resetPassword/{token}:
+  /users/resetPassword/{token}:
 
     patch:
         tags:
@@ -1168,6 +1062,23 @@ paths:
               description: Reset token
               required: true
               example: 6574bc5d0a8453403804feea
+        requestBody:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  password:
+                    type: string
+                    description: new password to be setted
+                    example: 'ciaociao'
+                  confirmPassword:
+                    type: string
+                    description: copy of the new password to be setted
+                    example: 'ciaociao'
+
+
+
         responses:
             200:
               description: A successful response
@@ -1184,7 +1095,7 @@ paths:
                               type: string
                               description: Status of the response
                               example: 'success'
-  /clubStat/{id}:
+  /club/{id}:
     get:
       tags:
         - Club
